# battle-bros

./: BACKLOG.md  CLAUDE.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md
docs/: ar600_20.txt  ar670_scraped.txt  fm7_22.txt  ucmj.txt  ucmj_scraped.txt
src/: main.rs  regs.rs  scraper.rs  sims.rs
