[package]
name = "battle-bros"
version = "0.1.0"
edition = "2024"
description = "Tiny offline AI for military regulation training. Soldier Board simulations on AR glasses."
license = "Unlicense"
repository = "https://github.com/cochranblock/battle-bros"

[[bin]]
name = "battle-bros"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
